--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "anshulnegii",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-it": "^1.6.4",
+    "openai": "^3.1.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.4"
