--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "google-it": "^1.6.4",
     "openai": "^3.1.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.19.4"
+    "whatsapp-web.js": "^1.19.4",
+    "puppeteer": "^19.7.5",
+    "html2json": "^1.0.2"
   }
 }
